test/cases/parser/TraitInvalidName.b
module TraitInvalidName

interface {}

function f<T: NonExistentTrait>() {}
